--- a/Backend/ribbony/src/main/resources/application.properties
+++ b/Backend/ribbony/src/main/resources/application.properties
@@ -12,3 +12,15 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# اسم ملف اللوج (هيتخلق جوه فولدر المشروع تحت /logs)
+logging.file.name=logs/ribbony.log
+
+# الليفل الأساسي
+logging.level.root=INFO
+
+# رولينج لوجز (Spring Boot 3.4)
+logging.logback.rollingpolicy.file-name-pattern=logs/ribbony-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-history=30
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.clean-history-on-start=true
