Refactor: Full project update with Admin Dashboard and Orders

--- a/Backend/ribbony/src/main/resources/application.properties
+++ b/Backend/ribbony/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=ribbony
-server.port=9090
+server.port=9092
 jwt.secret=FkoqhV+qYQ3mVkaGf5X3iLH9oFAfoxaW/4pb4Cb8MrE=
 jwt.expiration=3600000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ribbony
 spring.datasource.username=postgres
-spring.datasource.password=admin123
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
