--- a/Backend/ribbony/src/main/resources/application.properties
+++ b/Backend/ribbony/src/main/resources/application.properties
@@ -1,26 +1,5 @@
 spring.application.name=ribbony
-server.port=9092
-jwt.secret=FkoqhV+qYQ3mVkaGf5X3iLH9oFAfoxaW/4pb4Cb8MrE=
-jwt.expiration=3600000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ribbony
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.config.import=optional:configserver:http://ribbony-config-server:8888
 
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# اسم ملف اللوج (هيتخلق جوه فولدر المشروع تحت /logs)
-logging.file.name=logs/ribbony.log
-
-# الليفل الأساسي
-logging.level.root=INFO
-
-# رولينج لوجز (Spring Boot 3.4)
-logging.logback.rollingpolicy.file-name-pattern=logs/ribbony-%d{yyyy-MM-dd}.%i.log
-logging.logback.rollingpolicy.max-history=30
-logging.logback.rollingpolicy.max-file-size=10MB
-logging.logback.rollingpolicy.clean-history-on-start=true
+spring.cloud.config.fail-fast=true
