--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.561.0",
     "next": "16.0.3",
     "next-intl": "^4.5.5",
     "ogl": "^1.0.11",
